--- a/app/views/profiles/cycling_groups/_cycling_group_simple.html.erb
+++ b/app/views/profiles/cycling_groups/_cycling_group_simple.html.erb
@@ -12,7 +12,7 @@
 		<div class="left-side-big">
 			<p class="title"><%= t('app.models.cycling_group.singular') %></p>
 			<p class="name"><%= cycling_group.name %></p>
-			<p class="days-to-event"><%= days_to_event(cycling_group.number_of_days_to_event) %></p>
+			<p class="days-to-event"><%= days_to_event(cycling_group) %></p>
 		</div>
 		<div class="right-side-small">
 			<p class="timing"><%= t('app.events.meeting') %></p>
