--- a/app/views/cycling_groups/_form.html.erb
+++ b/app/views/cycling_groups/_form.html.erb
@@ -1,187 +1,175 @@
-<%= render :partial => 'shared/form_errors', :locals => {:object => cycling_group, :message => t('cycling_groups.views.form.commit.failure') } %>
 
-<div class="altering-cycling_group">
-	<br/>		
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="coordinates_lat_both" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.coordinates') %>
+<div class="hidden">
+	<%= hidden_field_tag "coordinates[lat]", cycling_group.coordinates.nil? ? "" : cycling_group.coordinates.lat %>
+	<%= hidden_field_tag "coordinates[lon]", cycling_group.coordinates.nil? ? "" : cycling_group.coordinates.lon %>
+</div>
+
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_name_not_empty" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.name') %>
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text"><%= f.label :name, t('cycling_groups.views.form.name') %></div>
+	<div class="span10"><%= f.text_field :name, :class => "input-large" %></div>
+</div>
+<br/>
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_details_not_empty" class="alert alert-error error">
+			<%= t('app.cycling_groups.views.form.validations.details') %>
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text"><%= f.label :details, t('cycling_groups.views.form.details') %></div>
+	<div class="span10">
+		<%= f.text_area :details, :rows => 2, :class => "span5" %>
+		<div id="cycling_group_details_count" class="field-counter"></div>
+	</div>
+</div>
+<br/>
+<div class="row-fluid">
+	<div class="span3 right-text">
+		<a class="btn btn-info btn-mini popover-trigger" 
+		data-placement="bottom" 
+		data-content="<%= t('cycling_groups.views.form.picture_note') %>" 
+		data-toggle="popover"><i class="icon icon-exclamation-sign"></i> Logo del grupo</a>
+	</div>
+	<div class="span9">
+		<div class="fileupload fileupload-new" data-provides="fileupload">
+			<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
+				<% if @cycling_group.persisted? && !@cycling_group.picture.image.url.nil? %>
+					<%= image_tag(@cycling_group.picture.image.url) %>
+				<% end %>
 			</div>
+			<div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
+		<div>
+		<span class="btn btn-file">
+			<span class="fileupload-new"><%= t('actions.input_file.select') %></span>
+			<span class="fileupload-exists"><%= t('actions.input_file.change') %></span>
+			<%= file_field_tag('picture') %>
+		</span>
+		<a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('actions.input_file.remove') %></a>
+		</div>
 		</div>
 	</div>
-	<div class="control-group">
-		<%= hidden_field_tag "coordinates[lat]", cycling_group.coordinates.nil? ? "" : cycling_group.coordinates.lat %>
-		<%= hidden_field_tag "coordinates[lon]", cycling_group.coordinates.nil? ? "" : cycling_group.coordinates.lon %>
-	</div>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_name_not_empty" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.name') %>
-			</div>
+</div>
+
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_meeting_time_hour_not_empty" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.meeting_time_hour') %>
+		</div>
+		<div id="cycling_group_meeting_time_minute_not_empty" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.meeting_time_minute') %>
 		</div>
 	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text"><%= f.label :name, t('cycling_groups.views.form.name') %></div>
-		<div class="span10"><%= f.text_field :name, :class => "input-large" %></div>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text">
+		<%= f.label :meeting_time, t('cycling_groups.views.form.meeting_time') %>
 	</div>
-	<br/>
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_details_not_empty" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.details') %>
-			</div>
-		</div>
+	<div class="span10">
+		<%= select_tag 'cycling_group[meeting_time][hour]',  options_for_select((0...25).to_a, cycling_group.meeting_time_fr(:hour)), {:include_blank => true, :class => "input-mini"} %>
+		<%= select_tag 'cycling_group[meeting_time][minute]',  options_for_select(["00", 15, 30, 45], cycling_group.meeting_time_fr(:minute)), {:include_blank => true, :class => "input-mini"} %>
 	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text"><%= f.label :details, t('cycling_groups.views.form.details') %></div>
-		<div class="span10">
-			<%= f.text_area :details, :rows => 2, :class => "span5" %>
-			<div id="cycling_group_details_count" class="field-counter"></div>
+</div>
+
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_departing_time_hour_not_empty" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.departing_time_hour') %>
 		</div>
-	</div>
-	<br/>
-	<div class="row-fluid">
-		<div class="span3 right-text">
-			<a class="btn btn-info btn-small popover-trigger" 
-			data-placement="bottom" 
-			data-content="<%= t('cycling_groups.views.form.picture_note') %>" 
-			title="" 
-			data-toggle="popover"><i class="icon icon-exclamation-sign"></i> Logo del grupo</a>
-		</div>
-		<div class="span9">
-			<div class="fileupload fileupload-new" data-provides="fileupload">
-				<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
-					<% if @cycling_group.persisted? && !@cycling_group.picture.image.url.nil? %>
-						<%= image_tag(@cycling_group.picture.image.url) %>
-					<% end %>
-				</div>
-				<div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
-			<div>
-			<span class="btn btn-file">
-				<span class="fileupload-new"><%= t('actions.input_file.select') %></span>
-				<span class="fileupload-exists"><%= t('actions.input_file.change') %></span>
-				<%= file_field_tag('picture') %>
-			</span>
-			<a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('actions.input_file.remove') %></a>
-			</div>
-			</div>
+		<div id="cycling_group_departing_time_minute_not_empty" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.departing_time_minute') %>
 		</div>
 	</div>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_meeting_time_hour_not_empty" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.meeting_time_hour') %>
-			</div>
-			<div id="cycling_group_meeting_time_minute_not_empty" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.meeting_time_minute') %>
-			</div>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text">
+		<%= f.label :departing_time, t('cycling_groups.views.form.departing_time') %>
+	</div>
+	<div class="span10">
+		<%= select_tag 'cycling_group[departing_time][hour]',  options_for_select((0...25).to_a, cycling_group.departing_time_fr(:hour)), {:include_blank => true, :class => "input-mini"} %>
+		<%= select_tag 'cycling_group[departing_time][minute]',  options_for_select(["00", 15, 30, 45], cycling_group.departing_time_fr(:minute)), {:include_blank => true, :class => "input-mini"} %>
+	</div>
+</div>
+<br/>
+<div class="row-fluid">
+	<div class="span2 right-text">
+		<%= f.label :periodicity, t('cycling_groups.views.form.periodicity') %>
+	</div>
+	<div class="span10">
+		<%= select_tag 'cycling_group[periodicity_tmp][ocurrence_timing]', 
+		options_for_select(CyclingGroup.humanized_categories_for(:ocurrence_timings).invert, cycling_group.periodicity_for(:ot)), {:include_blank => true, :class => "input-small"} %>
+		<%= select_tag 'cycling_group[periodicity_tmp][day_timing]', 
+		options_for_select(CyclingGroup.humanized_categories_for(:day_timings).invert, cycling_group.periodicity_for(:dt)), {:include_blank => true, :class => "input-medium"} %>
+		<%= select_tag 'cycling_group[periodicity_tmp][recurrence_timing]', 
+		options_for_select(CyclingGroup.humanized_categories_for(:recurrence_timings).invert, cycling_group.periodicity_for(:rt)), {:include_blank => true, :class => "input-medium"} %>
+	</div>
+</div>
+
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_twitter_account_regexp" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.twitter_account') %>
 		</div>
 	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text">
-			<%= f.label :meeting_time, t('cycling_groups.views.form.meeting_time') %>
-		</div>
-		<div class="span10">
-			<%= select_tag 'cycling_group[meeting_time][hour]',  options_for_select((0...25).to_a, cycling_group.meeting_time_fr(:hour)), {:include_blank => true, :class => "input-mini"} %>
-			<%= select_tag 'cycling_group[meeting_time][minute]',  options_for_select(["00", 15, 30, 45], cycling_group.meeting_time_fr(:minute)), {:include_blank => true, :class => "input-mini"} %>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text">
+		<%= f.label :twitter_account, t('cycling_groups.views.form.twitter_account') %>
+	</div>
+	<div class="span10">
+		<div class="input-prepend">
+			<span class="add-on">@</span>
+			<%= f.text_field :twitter_account, :class => 'input-medium', :placeholder => t('cycling_groups.views.form.twitter_account') %>
 		</div>
 	</div>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_departing_time_hour_not_empty" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.departing_time_hour') %>
-			</div>
-			<div id="cycling_group_departing_time_minute_not_empty" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.departing_time_minute') %>
-			</div>
+</div>
+<br/>
+
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_facebook_url_regexp" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.url') %>
 		</div>
 	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text">
-			<%= f.label :departing_time, t('cycling_groups.views.form.departing_time') %>
-		</div>
-		<div class="span10">
-			<%= select_tag 'cycling_group[departing_time][hour]',  options_for_select((0...25).to_a, cycling_group.departing_time_fr(:hour)), {:include_blank => true, :class => "input-mini"} %>
-			<%= select_tag 'cycling_group[departing_time][minute]',  options_for_select(["00", 15, 30, 45], cycling_group.departing_time_fr(:minute)), {:include_blank => true, :class => "input-mini"} %>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text">
+		<%= f.label :facebook_url, t('cycling_groups.views.form.facebook_url') %>
+	</div>
+	<div class="span10">
+		<%= f.text_field :facebook_url, :class => "input-large" %>
+	</div>
+</div>
+<br/>
+
+<div class="row-fluid">
+	<div class="span12">
+		<div id="cycling_group_website_url_regexp" class="alert alert-error error">
+			<%= t('cycling_groups.views.form.validations.url') %>
 		</div>
 	</div>
-	<br/>
-	<div class="row-fluid">
-		<div class="span2 right-text">
-			<%= f.label :periodicity, t('cycling_groups.views.form.periodicity') %>
-		</div>
-		<div class="span10">
-			<%= select_tag 'cycling_group[periodicity_tmp][ocurrence_timing]', 
-			options_for_select(CyclingGroup.humanized_categories_for(:ocurrence_timings).invert, cycling_group.periodicity_for(:ot)), {:include_blank => true, :class => "input-small"} %>
-			<%= select_tag 'cycling_group[periodicity_tmp][day_timing]', 
-			options_for_select(CyclingGroup.humanized_categories_for(:day_timings).invert, cycling_group.periodicity_for(:dt)), {:include_blank => true, :class => "input-medium"} %>
-			<%= select_tag 'cycling_group[periodicity_tmp][recurrence_timing]', 
-			options_for_select(CyclingGroup.humanized_categories_for(:recurrence_timings).invert, cycling_group.periodicity_for(:rt)), {:include_blank => true, :class => "input-medium"} %>
-		</div>
+</div>
+<div class="row-fluid">
+	<div class="span2 right-text">
+		<%= f.label :website_url, t('cycling_groups.views.form.website_url') %>
 	</div>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_twitter_account_regexp" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.twitter_account') %>
-			</div>
-		</div>
+	<div class="span10">
+		<%= f.text_field :website_url, :class => "input-large" %>
 	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text">
-			<%= f.label :twitter_account, t('cycling_groups.views.form.twitter_account') %>
-		</div>
-		<div class="span10">
-			<div class="input-prepend">
-				<span class="add-on">@</span>
-				<%= f.text_field :twitter_account, :class => 'input-medium', :placeholder => t('places.workshops.views.form.twitter') %>
-			</div>
-		</div>
-	</div>
-	<br/>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_facebook_url_regexp" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.url') %>
-			</div>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text">
-			<%= f.label :facebook_url, t('cycling_groups.views.form.facebook_url') %>
-		</div>
-		<div class="span10">
-			<%= f.text_field :facebook_url, :class => "input-large" %>
-		</div>
-	</div>
-	<br/>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<div id="cycling_group_website_url_regexp" class="alert alert-error error">
-				<%= t('cycling_groups.views.form.validations.url') %>
-			</div>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span2 right-text">
-			<%= f.label :website_url, t('cycling_groups.views.form.website_url') %>
-		</div>
-		<div class="span10">
-			<%= f.text_field :website_url, :class => "input-large" %>
-		</div>
-	</div>
-	<br/>
-	<div class="row-fluid">
-		<div class="span12">
-			<div class="centered-text">
-				<%= f.submit t('actions.save'), :class => "btn btn-large btn-success submitter"  %>
-				<%= image_tag('mini_spinner.gif', :class => "spinner") %>
-			</div>
+</div>
+<br/>
+<div class="row-fluid">
+	<div class="span12">
+		<div class="centered-text">
+			<%= f.submit t('actions.save'), :class => "btn btn-large btn-success submitter"  %>
+			<%= image_tag('mini_spinner.gif', :class => "spinner") %>
 		</div>
 	</div>
 </div>
