--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 				<% end %>
 			</div>
 			<ul>
-				<li><a href="" class="action-box"><i class="icon-eye-open"></i> <span class="big">Explora</span></a></li>
+				<li><a href="" class="action-box"><i class="icon-search"></i> <span class="big">Buscar</span></a></li>
 				<li><a href="" class="action-box"><span class="big">Sube</span> <span class="small">tu grupo</span> <i class="icon-upload"></i></a></li>
 			</ul>
 		</div>
