--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -1,7 +1,11 @@
 /*
  *= require_self
- *= require bootstrap_and_overrides
  *= require jquery.fancybox
+ *= require bootstrap_and_overrides
+ *= require owl.carousel
+ *= require owl.theme
+ *= require shared/main
+ *= require map_based/common
 */
 
 @import "colors.css.scss";
