Improved and fixed broken and/or legacy features and UI

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,13 +4,13 @@
  *= require owl.carousel
  *= require owl.theme
  *= require colors
+ *= require shared/main
  *= require discover
  *= require landing
  *= require login
  *= require map_based/common
  *= require profiles
  *= require routes
- *= require shared/main
-
+ *= require cycling_groups
 */
 
