--- a/app/views/profiles/_main_user_info.html.erb
+++ b/app/views/profiles/_main_user_info.html.erb
@@ -1,24 +1,21 @@
-<div class="decoration-image"></div>
-<div class="content">
-	<div class="centered-text">
-		<div class="pic-container">
-			<% url = !current_user.nil? && current_user!=user && !current_user.superuser? ? nil : user_settings_path(user.username) %>
-			
-			<% if !user.picture.nil? %>
-				<%= link_to image_tag(user.picture.image.mini_thumb.url, :size => '95x100', :class => 'rounded'), url %>
-			<% else %>
-				<%= link_to image_tag('user_no_pic.png', :size => '95x100', :class => 'rounded'), url %>
-			<% end %>
-		</div>
-	
-		<div class="details">
-			<p class="username"><%= user.username %></p>
-			<% unless user.city_unset? %>
-				<div class="city" data-lon="<%= @user.city.coordinates.lon %>" data-lat="<%= @user.city.coordinates.lat %>">
-					<p class="name"><span><%= t('app.profiles.cycling_on') %></span> <%= user.city.name %></p>
-				</div>
-			<% end %>
-			<p class="bio"><%= user.bio %></p>
-		</div>
+<div class="centered-text">
+	<div class="pic-container">
+		<% url = !current_user.nil? && current_user!=user && !current_user.superuser? ? nil : user_settings_path(user.username) %>
+		
+		<% if !user.picture.nil? %>
+			<%= link_to image_tag(user.picture.image.mini_thumb.url, :size => '95x100', :class => 'normal-user-pic'), url %>
+		<% else %>
+			<%= link_to image_tag('user_no_pic.png', :size => '95x100', :class => 'normal-user-pic'), url %>
+		<% end %>
+	</div>
+
+	<div class="info-container">
+		<p class="username"><%= user.username %></p>
+		<% unless user.city_unset? %>
+			<div class="city" data-lon="<%= @user.city.coordinates.lon %>" data-lat="<%= @user.city.coordinates.lat %>">
+				<p class="name"><span><%= t('app.profiles.cycling_on') %></span> <%= user.city.name %></p>
+			</div>
+		<% end %>
+		<p class="bio"><%= user.bio %></p>
 	</div>
 </div>
