--- a/app/assets/stylesheets/discover.css.scss
+++ b/app/assets/stylesheets/discover.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*
+ *= require shared/main
  *= require map_based/common
  *= require bootstrap-fileupload.min
 **/
@@ -460,12 +461,10 @@ html, body {
 		
 		p {
 			text-align: center;
-			margin: 0 !important;
-			padding: 0 !important;
 		}
 		
 		.metrics {
-			
+			margin-top: 20px !important;
 			.value {
 				font-size: 40px;
 				color: $wikicleta_blue;
@@ -499,6 +498,7 @@ html, body {
 	}
 	
 	.floating-panel {
+		width: 130px;
 		position: fixed;
 		z-index: 99999;
 		right: 70px;
@@ -508,7 +508,7 @@ html, body {
 		
 		.half {
 			display: inline-block;
-			width: 50px;
+			width: 30px;
 			padding: 10px;
 			background-color: rgba(255,255,255,0.5) !important;
 		}
