--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -1,12 +1,7 @@
 /*
- *= require_self
- *= require bootstrap_and_overrides
- *= require shared/main
- */
-
-/*
  *  Styles for login view
  */
+@import "colors.css.scss";
 
 .login {
 	width: 500px;
@@ -20,18 +15,6 @@
 		margin-top: 60px;
 		h2 {
 			text-align: center;
-		}
-		
-		input[type=text], input[type=password], input[type=email] {
-			font-family: "gothamrndbook-Book";
-			font-size: 14px;
-			width: 300px;
-			height: 30px;
-			margin: 10px;
-		}
-		
-		.submit-area {
-			margin-top: 20px;
 		}
 	}
 	
@@ -48,3 +31,37 @@
   border: 0.1px solid #8EC4FF;    
 }
 
+// Forms
+
+select, input[type=text], input[type=password], input[type=email], textarea {
+	font-family: "gothamrndbook-Book";
+	font-size: 14px;
+}
+
+input[type=text], input[type=password], input[type=email] {
+	width: 300px;
+	height: 30px;
+	margin: 10px;
+}
+
+.small-field-with-label {
+	> * {
+		display: inline-block;
+	}
+	> input {
+		width: 80px;
+	}
+}
+
+textarea {
+	width: 300px !important;
+	height: 100px;
+}
+
+label {
+	color: $wikicleta_orange;
+}
+
+.submit-area {
+	margin-top: 20px;
+}
