--- a/app/views/layouts/discover.html.erb
+++ b/app/views/layouts/discover.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <%= stylesheet_link_tag    "discover" %>
+  <%= stylesheet_link_tag "application" %>
   
 	<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
 	<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
