--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag  "application" %>
 
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&sensor=true"></script>
-	<%= javascript_include_tag "application" %>
+	<%= javascript_include_tag "application_map" %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fav_icons' %>
 	<%= render 'layouts/shared/mix_panel' %>
