--- a/app/views/routes/_route.html.erb
+++ b/app/views/routes/_route.html.erb
@@ -13,5 +13,9 @@
 		<%= render :partial => 'shared/pois/contributor_attribution', :locals => { :user => route.users.first, :date => route.updated_at } %>
 	</div>
 	
-	<%= render 'shared/pois/common_actions' %>
+	<% if editable_route=user_can_edit_route?(current_user, route) %>
+		<%= render :partial => 'shared/pois/common_actions', :locals => {:delete_url => route_path(route), :url => profiles_edit_user_route_path(current_user, route), :condition => editable_route } %>
+	<% else %>
+		<%= render 'shared/pois/common_actions' %>
+	<% end %>
 </div>
